# YoloPlateSentry

./: .gitignore  Cargo.toml  README.md  config.json
crates/notification/: Cargo.toml
crates/notification/src/: lib.rs
crates/plate-ocr/: Cargo.toml
crates/plate-ocr/src/: lib.rs
crates/yolo-detector/: Cargo.toml
crates/yolo-detector/src/: lib.rs
src/: main.rs
