[package]
name = "yolo_plate_sentry"
version = "0.1.0"
edition = "2021"
authors = ["YoloPlateSentry Team"]
description = "Smart vehicle license plate detection and access control system"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Web framework
actix-web = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Image processing
image = "0.24"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

[workspace]
members = [
    "crates/yolo-detector",
    "crates/plate-ocr",
    "crates/notification",
]