[package]
name = "notification"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"