[package]
name = "plate-ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tesseract OCR binding
leptess = "0.14"

# Image processing
image = "0.24"
imageproc = "0.23"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Logging
tracing = "0.1"

# Text processing
regex = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"