[package]
name = "yolo-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
# ONNX Runtime for YOLOv8 inference
ort = { version = "1.16", features = ["cuda"] }

# Image processing
image = "0.24"
imageproc = "0.23"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"